# job-system-c99

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
include/: jobs.h
include/private/: api_defines.h  api_types.h  context.h  jobs_api.h  work_stealing_queue.h
src/: context.c  jobs_api.c  work_stealing_queue.c
